2012-08-12 dschulze@adobe.com
	More clarification on used terms.

2012-08-11 dschulze@adobe.com
	Changed syntax for 'mask' and other properties to fit initial intention.

2012-08-11 dschulze@adobe.com
	Added 'The Masking Rendering Model' section.

2012-08-11 dschulze@adobe.com
	Mask sources can not be stacked to a mask layer.

2012-08-11 dschulze@adobe.com
    Make 'mask' shorthand property.

2012-08-11 dschulze@adobe.com
    Fixed typo on 'mask-origin'.

2012-08-11 dschulze@adobe.com
    Added 'mask-origin'.

2012-08-11 dschulze@adobe.com
    Added more properties from the implementation of CSS mask in WebKit.

2012-08-10 dschulze@adobe.com
    Create template for CSS Masking.