@@ -491,11 +491,31 @@ vertical strip and one horizontal strip.
 <p style="display:none">Example(s):
 <pre>
 body {
-  mask: url("pendant.png");
+  mask: url(pendant.png);
   mask-repeat: repeat-y;
   mask-position: center;
 }
 </pre>
+</div>
+
+<div class=example>
+  <p style="display:none">Example(s):
+  <pre>
+body {
+  background-color: blue;
+  mask-image: url(dot-mask.png);
+  mask-type: luminance;
+  mask-repeat: space;
+}
+</pre>
+
+  <div class=figure>
+    <p><img src="images/mask-repeat.svg" alt="Image of an element with a dotted mask." width="240" style="border: solid black 1px;">
+
+    <p class=caption>The effect of 'space': the mask image of a dot is
+    tiled to cover the whole <span class=index>mask painting area</span> and the mask images are equally
+    spaced.
+  </div>
 </div>
 
 <p>See the section <a href="#layering">“Layering multiple mask
@@ -715,7 +735,7 @@ the mask painting area. Negative values represent an offset
       and 50% down the image is to be placed at the point 75% across and 50%
       down the area.
       <div class="figure">
-      <p><img alt="Diagram of image position within element" src="bg-pos.png">
+      <p><img alt="Diagram of image position within element" src="images/bg-pos.png">
       <p class="caption">Diagram of the meaning of ''mask-position: 75% 50%''.
       </div>
     </div>
