@@ -728,11 +728,35 @@ div { mask-image: url(tl.png), url(tr.png) }
 
    <pre>
 body {
-  mask: url("pendant.png");
+  mask: url(pendant.png);
   mask-repeat: repeat-y;
   mask-position: center;
 }
 </pre>
+  </div>
+
+  <div class=example>
+   <p style="display:none">Example(s):
+
+   <pre>
+body {
+  background-color: blue;
+  mask-image: url(dot-mask.png);
+  mask-type: luminance;
+  mask-repeat: space;
+}
+</pre>
+
+   <div class=figure>
+    <p><img alt="Image of an element with a dotted mask."
+     src="images/mask-repeat.svg" style="border: solid black 1px;" width=240>
+     
+
+    <p class=caption>The effect of ‘<code class=property>space</code>’:
+     the mask image of a dot is tiled to cover the whole <a class=index
+     href="#mask-painting-area" id=mask-painting-area4>mask painting area</a>
+     and the mask images are equally spaced.
+   </div>
   </div>
 
   <p>See the section <a href="#layering">“Layering multiple mask
@@ -839,7 +863,7 @@ body {
   </dl>
 
   <p>Even if the image is fixed, it is still only visible when it is in the
-   <a href="#mask-painting-area"><em class=index id=mask-painting-area4>mask
+   <a href="#mask-painting-area"><em class=index id=mask-painting-area5>mask
    painting area</em></a> of the element.
 
   <div class=example>
@@ -924,7 +948,7 @@ h1 {
      <th>Percentages:
 
      <td>refer to size of <a class=index href="#mask-painting-area"
-      id=mask-painting-area5>mask painting area</a> <em>minus</em> size of
+      id=mask-painting-area6>mask painting area</a> <em>minus</em> size of
       mask image; see text
 
     <tr>
@@ -948,7 +972,7 @@ h1 {
   <p>If mask images have been specified, this property specifies their
    initial position (after any <a href="#the-mask-size">resizing</a>) within
    their corresponding <a class=index href="#mask-painting-area"
-   id=mask-painting-area6>mask painting area</a>.
+   id=mask-painting-area7>mask painting area</a>.
 
   <p>Where
 
@@ -969,7 +993,7 @@ h1 {
    vertical position (or offset). <var>&lt;percentage&gt;</var> and
    <var>&lt;length&gt;</var> values here represent an offset of the top left
    corner of the mask image from the top left corner of the <a class=index
-   href="#mask-painting-area" id=mask-painting-area7>mask painting area</a>.
+   href="#mask-painting-area" id=mask-painting-area8>mask painting area</a>.
 
   <p class=note>Note that a pair of keywords can be reordered while a
    combination of keyword and length or percentage cannot. So ‘<code
@@ -1025,7 +1049,8 @@ h1 {
       area.
 
      <div class=figure>
-      <p><img alt="Diagram of image position within element" src=bg-pos.png>
+      <p><img alt="Diagram of image position within element"
+       src="images/bg-pos.png">
 
       <p class=caption>Diagram of the meaning of ‘<code
        class=css>mask-position: 75% 50%</code>’.
@@ -2665,10 +2690,11 @@ div {
     href="#mask-painting-area1" title="mask painting area">7.</a>, <a
     href="#mask-painting-area2" title="mask painting area">7.</a>, <a
     href="#mask-painting-area3" title="mask painting area">7.</a>, <a
-    href="#mask-painting-area4" title="mask painting area">8.</a>, <a
-    href="#mask-painting-area5" title="mask painting area">9.</a>, <a
+    href="#mask-painting-area4" title="mask painting area">7.</a>, <a
+    href="#mask-painting-area5" title="mask painting area">8.</a>, <a
     href="#mask-painting-area6" title="mask painting area">9.</a>, <a
-    href="#mask-painting-area7" title="mask painting area">9.</a>
+    href="#mask-painting-area7" title="mask painting area">9.</a>, <a
+    href="#mask-painting-area8" title="mask painting area">9.</a>
 
    <li>mask-position, <a href="#mask-position"
     title=mask-position><strong>9.</strong></a>
