@@ -1,4 +1,7 @@
 2012-08-12 dschulze@adobe.com
+	Added more images.
+
+2012-08-12 dschulze@adobe.com
 	More clarification on used terms.
 
 2012-08-11 dschulze@adobe.com
